--- a/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
+++ b/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
@@ -181,7 +181,7 @@ Both forms were investigated by Weymiens, and the nonlinear model proved more ro
 Therefore, this nonlinear model will be used in this study.
 
 In slab geometry, a radial electric field is proportional to $V_{\mathbf{E}\times\mathbf{B}}$, allowing us to substitute in $Z$, a normalized form of the radial electric field.
-The details of $Z$ are described in the following section \ref{ssec:E_r}.
+The details of $Z$ are described in depth in Section \ref{ssec:E_r}.
 This changes the coefficient of the nonlinear turbulence model $\eta_\text{NL}$ into
 \begin{align} % New Saturation Coefficient
 	\eta_\text{NL} \,=\, 1 +
