Bulk plot comparison, more to come

--- a/Thesis/Dynamical_Model/Dynamical_Model.tex
+++ b/Thesis/Dynamical_Model/Dynamical_Model.tex
@@ -164,6 +164,13 @@ It appears in the dispersion equation for linearized waves in a non-relativistic
 		\, \text{d}t \label{eq:plasma_disp}
 \end{align}
 \emph{\textbf{Note}} that this function is usually denoted as $Z$, but I am breaking this standard notation to avoid ambiguity with the normalized radial electric field.
+\todo{\color{red}Explain why we are ditching the complex version for a gaussian}
+\begin{figure}[tb] % Comparison of complex-valued plasma dispersion with simple gaussian
+	\centering
+	\includegraphics[width=0.9\textwidth]{../Graphics/Model_Graphs/Bulk_Definition_Comparison.png}
+	\caption{FILL??}
+	\label{fig:bulk_definition_comparison}
+\end{figure}
 
 In addition, although this flux, at first glance, may take a similar shape to subsequently-presented fluxes, the plasma dispersion function does not allow for a direct comparison in the form of Eq.~\ref{eq:Gamma_an_g}.
 
