--- a/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
+++ b/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
@@ -180,8 +180,8 @@ For example, the nonlinear model would adjust it to the following
 Both forms were investigated by Weymiens, and the nonlinear model proved more robust to changes in plasma parameters \cite{weymiens_bifurcation_2014}.
 Therefore, this nonlinear model will be used in this study.
 
-In slab geometry, a radial electric field is proportional to $V_{\mathbf{E}\times\mathbf{B}}$, allowing us to substitute in $Z$, a normalized form of the radial electric field.
-The details of $Z$ are described in depth in Section \ref{ssec:E_r}.
+In slab geometry, a radial electric field is proportional to $V_{\mathbf{E}\times\mathbf{B}}$, allowing us to substitute in $Z$, a form of the radial electric field that is normalized with the temperature $T$ and poloidal ion (Larmor) gyroradius $\rho_{\theta i}$.
+The definition of $Z$ is shown as Eq.~\ref{eq:Z_and_rho_definitions} in Section \ref{ssec:E_r}.
 This changes the coefficient of the nonlinear turbulence model $\eta_\text{NL}$ into
 \begin{align} % New Saturation Coefficient
 	\eta_\text{NL} \,=\, 1 +
