Plasma parameters appendix init

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -154,6 +154,7 @@
 
 \begin{appendices}
 \setcounter{tocdepth}{0}
+\input{Appendices/Plasma_Parameters.tex}
 \input{Appendices/Code.tex}
 \input{Appendices/Normalization.tex}
 \end{appendices}
