Progress; conclusion started

--- a/Thesis/Conclusion/Conclusion.tex
+++ b/Thesis/Conclusion/Conclusion.tex
@@ -1,2 +1,36 @@
 \chapter{Conclusion}\label{chapter:conclusion}
 
+\begin{itemize}
+	\item \textbf{Which electric field-generating mechanisms are dominant in concrete experimental tokamak conditions?}
+
+	Bulk viscosity consistently has the largest effect on the field.
+	Ion orbit loss becomes highly suppressed once there is a nonzero value of the electric field at the edge.
+\end{itemize}
+
+
+\begin{itemize}
+	\item \textbf{What mechanisms, and therefore necessary parameters, should be investigated?}
+\end{itemize}
+
+
+\begin{itemize}
+	\item \textbf{What are the appropriate forms of each flux for the model and what are the relative sensitivities and sources of uncertainty?}
+
+	Ion orbit loss $\Gamma_i^\text{ol}$ is highly suppressed by nonzero values of $Z$.
+	Also, due to its high spatial sensitivity, this also pins it to the edge.
+	Uncertainties in the position or value of $Z$ highly affect this term, but does not manifest in any significant change in $Z$ itself.
+
+	The shear viscosity $J^{\pi\perp}$ is sensitive only to the dynamic viscosity $\mu$, and is completely necessary to have the system at all.
+
+	The parameters of the diffusivity are extremely sensitive, as a small change to the coefficient of the shear viscosity $a_3$ can change the fundamental behavior of the entire system.
+	Due to this being a qualitative model, in which the parameters are chosen rather than calculated,...
+\end{itemize}
+
+
+\begin{itemize}
+	\item \textbf{What is the variation in dominance of each field-generating mechanism across increasing input power?}
+
+	As of now, charge exchange friction is directly proportional to the core particle flux $\Gamma_c$, giving it artificially-high relation on initialization.
+	However, the bulk viscosity $\Gamma_i^{\pi\parallel}$
+\end{itemize}
+
