--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -66,7 +66,8 @@ Investigated in this project is two which simulate the radial electric field, th
 To recreate the bifurcating behavior, it artificially invokes a nonlinear polynomial to an otherwise-linear equation
 The second of these models takes a more physical approach, by including nonlinear radial currents established by literature.
 
-The system of partial differential equations that are established are solved by using a one-dimensional finite-volume method solver, which is described in Chapter/Section~\ref{chapter:numerical_method}.
+The system of partial differential equations that are established are solved by using a one-dimensional finite-volume method solver.
+This method, and its intricacies, is described in Chapter~\ref{chapter:numerical_method}.
 
 \section{Research Questions}\label{sec:research_questions}
 Although there have been compilations of different theories describing the transition, there is yet to be a conclusive, comprehensive one \cite{connor_review_2000}.
@@ -88,7 +89,7 @@ The calculation is done with a finite volume method solver, in which the results
 
 The main input heating power regime previously investigate was strictly limited to near the H--L transition \cite{staps_backstepping_2017}.
 Performing a scan of input heating power significantly above the lower threshold could show a difference in behavior of the fluxes and resulting field.
-Therefore, \textbf{what is the variation in dominance of each field-generating term across increasing input power}, including those inside and outside the regime with non-unique operational modes?
+Therefore, \textbf{what is the variation in dominance of each field-generating mechanism across increasing input power}, including those inside and outside the regime with non-unique operational modes?
 
 \section{Outline}\label{sec:outline}
 The layout of this report is as follows.
