--- a/Thesis/Results/Results.tex
+++ b/Thesis/Results/Results.tex
@@ -1,2 +1,22 @@
 \chapter{Results}\label{chapter:results}
 
+\begin{figure}[tb]
+	\centering
+	\includegraphics[width=0.7\textwidth]{../Graphics/Model_Graphs/Original_FS1_0000.png}
+	\caption{CAPTION!}
+	\label{fig:Original_FS_L--mode}
+\end{figure}
+\begin{figure}[tb]
+	\centering
+	\includegraphics[width=0.7\textwidth]{../Graphics/Model_Graphs/Original_FS_0200.png}
+	\caption{CAPTION!}
+	\label{fig:Original_FS_H--mode}
+\end{figure}
+
+\TwoFig{../Graphics/Model_Graphs/Original_FS1_0000.png}
+	{CAPTION!}
+	{fig:Original_FS_L--mode}
+	{../Graphics/Model_Graphs/Original_FS_0200.png}
+	{CAPTION!}
+	{fig:Original_FS_H--mode}
+
